BUG 1370, 1389, 1387, 1374, 1368, 1386, 1376: Bunch of location fixes * Don't allow prompt 'Enter a name' as a column name * Bail out of wizardAction once sidebar is closed to prevent error * Fix rendering of lat/long only in alt grid * Fix location editor in IE by adding String trim function * Fix some input styling in IE7 * Fix browser crash when closing sidebar in IE7 * Fix z-index of My Socrata dropdown by dynamically adjusting z-index of sidebar parent only when overlay is shown * Don't advanced wizard if selecting a radio button associated with another input
QA:
* Make sure bugs are fixed

--- a/public/stylesheets/blist-grid-screen.css
+++ b/public/stylesheets/blist-grid-screen.css
@@ -719,7 +719,6 @@ body#lensBody
 {
     padding-bottom: 1em;
     position: relative;
-    z-index: 20;
 }
 
 /* Modify sidebar to lie below grid */
